# OverlayRenderer

./: .clang_complete  .gitignore  .gitmodules  BUILD.gn  DEPS.py  LICENSE  README.md
src/: manager.h
src/cef/: BUILD.gn  browser_client.cc  browser_client.h  browser_handler.cc  browser_handler.h  browser_life_span_handler.cc  browser_life_span_handler.h  client_app.cc  client_app.h  other_app.h  render_handler.cc  render_handler.h  render_process_handler.cc  render_process_handler.h  renderer_app.cc  renderer_app.h  runtime.cpp  state_tracker.cc  state_tracker.h
src/common/: BUILD.gn  logging.h  packets.h  packets.proto  pipe_wrapper.h  win_pipe_wrapper.cc  win_pipe_wrapper.h
src/standalone/: BUILD.gn  cef_overlay.cc  cef_overlay.h  host.cc  host.h  pipe_thread.cc  pipe_thread.h  settings.cc  settings.h  widgets.cc  widgets.h
tools/: fetch_deps.py  parse_cef_cmakelists.py
